k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk042-my-app
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk042-my-app
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "8081"
        prometheus.io/path: "/actuator/prometheus"
        update: 1ae2adf933c27354a572ce4c738d013f
      labels:
        app: sk042-my-app
    spec:
      serviceAccountName: default
      containers:
        - name: my-app
          image: amdp-registry.skala-ai.com/skala25a/sk042-my-app:3.0.0
          imagePullPolicy: Always
