k8s/cm-auto-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: sk042-cm-tls-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  rules:
    - host: sk042-tls.skala25a.project.skala-ai.com
      http:
        paths:
          - backend:
              service:
                name: sk042-my-app
                port:
                  number: 8080
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: sk042-my-app
                port:
                  number: 8081
            path: /actuator
            pathType: Prefix
          - backend:
              service:
                name: sk042-my-app
                port:
                  number: 8080
            path: /swagger
            pathType: Prefix
          - backend:
              service:
                name: sk042-my-app
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sk042-tls.skala25a.project.skala-ai.com
      secretName: sk042-cm-auto-tls-secret
